--- a/src/styles/kultur.css
+++ b/src/styles/kultur.css
@@ -5,7 +5,6 @@
 
 .kultur {
   position: relative;
-  min-height: 100vh;
   display: grid;
   place-items: center;
   overflow: hidden;
